--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -5,7 +5,7 @@
   url: 'https://github.com/Arnoldovna'
 
 - contact: 'email'
-  url: 'marina.wilhelm@icloud.com'
+  url: 'mailto:marina.wilhelm@icloud.com'
 
 - contact: 'instagram'
   url: 'https://www.instagram.com/arnoldovnawilgelm/'
