prepare for publishing

--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,7 @@
 title: MAW Portfolio
 email: marina.wilhelm@icloud.com
 description: Ui Design and Frontend Development portfolio by Marina Arnoldovna Wilgelm
-baseurl: '' # the subpath of your site, e.g. /blog
-url: 'http://www.mawstudio.de' # the base hostname & protocol for your site, e.g. http://example.com
+url: 'https://www.maw-studio.de' # the base hostname & protocol for your site, e.g. http://example.com
 instagram_username: arnoldovnawilgelm
 github_username: arnoldovna
 
